# AfterPackets

./: README.md
android-app/: FEATURE_GUIDE.md  README.md  build.gradle.kts  gradlew  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  native_interface.cpp  packet_parser.cpp  packet_parser.h
android-app/app/src/main/java/com/packethunter/mobile/: MainActivity.kt
android-app/app/src/main/java/com/packethunter/mobile/capture/: AppTracker.kt  NativePacketParser.kt  NetworkStatsTracker.kt  PacketCaptureService.kt  PacketProcessor.kt  VpnDiagnostics.kt  VpnSocketProtector.kt  VpnVerification.kt
android-app/app/src/main/java/com/packethunter/mobile/data/: FilterModels.kt  FilterPresetDao.kt  PacketDao.kt  PacketDatabase.kt  PacketInfo.kt
android-app/app/src/main/java/com/packethunter/mobile/export/: ExportManager.kt
android-app/app/src/main/java/com/packethunter/mobile/filtering/: PacketFilterEngine.kt
android-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
desktop-web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
desktop-web/src/: App.tsx  index.css
desktop-web/src/components/: GlobeMap.tsx  GoogleMapView.tsx
desktop-web/src/data/: sampleData.ts
desktop-web/src/pages/: Dashboard.tsx  ImportPage.tsx  MapView.tsx  ReplayPage.tsx  RulesPage.tsx
desktop-web/src/store/: useStore.ts
desktop-web/src/types/: index.ts
desktop-web/src/utils/: realtimeSimulator.ts
(+26 files in other folders)
